--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
 
         @media only screen and (min-width: 992px) and (max-width: 1280.98px) {
             header {
+                padding: 1rem 2rem;
+
                 .headerImg {
-                    height: 65%;
+                    height: 60%;
                 }
 
                 .textCont {
@@ -130,9 +132,7 @@
                     }
                 }
             }
-
         }
-
 
         @media only screen and (min-width: 768px) and (max-width: 991px) {
             header {
