--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         audio.id = 'backgroundAudio';
         audio.src = 'media/beauty-of-nature-background-vlog-music-151643.mp3';
         audio.loop = true;
-        // audio.autoplay = true;
+        audio.autoplay = true;
         audio.volume = 0.5;
         document.body.appendChild(audio);
 
@@ -304,7 +304,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             typeWriter();
             fadeInText();
-            // playAudio();
+            playAudio();
         });
     </script>
 
